class added and main image displayed
hero-content-area class added to hero section
fixed issue with main image not displaying

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ section {
 /*Header*/
 
 .background-image {
-	background-image: url(imgs/mountain.jpg)
+	background-image: url(../imgs/mountain.jpg)
 }
 
 header {
