--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,12 @@ section p {
 	text-align: center;
 }
 
+@media (max-width: 800px) {
+	section {
+		padding: 50px 20px;
+	}
+}
+
 /*Header*/
 
 .background-image {
@@ -111,8 +117,18 @@ header nav {
 }
 
 header nav li {
-
 	margin: 0 15px;
+}
+
+@media (max-width: 800px) {
+	header {
+		padding: 20px 50px;
+		flex-direction: column;
+	}
+
+	header h2 {
+		margin-bottom: 15px;
+	}
 }
 
 /*Hero*/
@@ -163,6 +179,24 @@ header nav li {
 	}
 }
 
+@media (max-width: 800px) {
+	.hero {
+		min-height: 600px;
+	}
+
+	.hero h1 {
+		font-size: 48px;
+	}
+
+	.hero h3 {
+		font-size: 36px;
+	}
+
+	.hero a.btn {
+		padding: 15px 40px;
+	}
+}
+
 /*Destination*/
 
 .destinations .grid li {
@@ -183,6 +217,21 @@ header nav li {
 	flex-basis: 70%;
 }
 
+@media (max-width: 1000px) {
+	.destinations .grid li.small,
+	.destinations .grid li.large {
+		flex-basis: 50%;
+	}
+}
+
+@media (max-width: 800px) {
+	.destinations .grid li.small,
+	.destinations .grid li.large {
+		flex-basis: 100%;
+	}
+}
+
+
 /*Packages*/
 
 .packages .grid li {
@@ -200,6 +249,13 @@ header nav li {
 	margin: 25px 0;
 }
 
+@media (max-width: 800px) {
+	.packages .grid li {
+		flex-basis: 100%;
+		padding: 20px;
+	}
+}
+
 /*Testimonials*/
 
 .testimonials .quote {
@@ -209,6 +265,17 @@ header nav li {
 	margin: 40px 0 25px;
 }
 
+
+@media (max-width: 800px) {
+	.testimonials .quote {
+		font-size: 18px;
+		margin: 15px 0
+	}
+
+	.testimonials .author {
+		font-size: 14px;
+	}
+}
 /*Contact*/
 
 .contact form {
@@ -229,6 +296,13 @@ header nav li {
 	font-size: 18px;
 	color: #555;
 	flex: 1;
+}
+
+@media (max-width: 1000px) {
+	.contact form input {
+		flex-basis: 100%;
+		margin: 0 0 20px 0;
+	}
 }
 
 /*Footer*/
@@ -255,4 +329,19 @@ footer p {
 	font-size: 14px;
 	opacity: 0.6;
 	align-self: center;
+}
+
+@media (max-width: 1100px) {
+	footer {
+		flex-direction: column;
+	}
+
+	footer p {
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	footer ul li {
+		margin: 0 8px;
+	}
 }
